Creado mediante Colaboratory

--- a/Corrección_Examen.ipynb
+++ b/Corrección_Examen.ipynb
@@ -60,6 +60,96 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "CÓDIGO CON ERROR"
+      ],
+      "metadata": {
+        "id": "tpdCnCshxw6k"
+      },
+      "id": "tpdCnCshxw6k"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Función costo\n",
+        "$$ min = 12M_b + 6M_l$$\n",
+        "$$ Longitud = 2*Ancho$$"
+      ],
+      "metadata": {
+        "id": "yoS-if4Ex3zd"
+      },
+      "id": "yoS-if4Ex3zd"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sympy as sp\n",
+        "import numpy as np\n",
+        "\n",
+        "sp.var(\"x\") #Base\n",
+        "sp.var(\"h\") #Altura \n",
+        "\n",
+        "sp.var(\"area_b\") #Area Base \n",
+        "sp.var(\"area_l\") #Area del Lado\n",
+        "sp.var(\"b\") #Area Base \n",
+        "sp.var(\"l\") #Area Base \n",
+        "\n",
+        "costo = 12*3*area_b + 6*2*area_l\n",
+        "\n",
+        "b = 2*x**2\n",
+        "l = x*h\n",
+        "\n",
+        "v = b*h -12\n",
+        "costo "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "YWFfjc8Lx9U6",
+        "outputId": "9a8ca4bb-a661-46f3-a9c7-4bacc79120de"
+      },
+      "id": "YWFfjc8Lx9U6",
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "36*area_b + 12*area_l"
+            ],
+            "text/latex": "$\\displaystyle 36 area_{b} + 12 area_{l}$"
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### NOTA\n",
+        "Solamente hubo un error en el primer problema."
+      ],
+      "metadata": {
+        "id": "WGsjbpHe4Awy"
+      },
+      "id": "WGsjbpHe4Awy"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ¿Cuál fue el error? \n",
+        "el error fue plantar que voy a necesitar 3 materiales para base, por eso multipliqué 12 por 3 cuando solamente iba a requerir uno, los materiales para los lados puse que solo iba a necesitar 2 y por eso multipliqué 2 por 6. Este error se debe a que al plantear el problema yo pensé que el material para base que cuesta 12 es para los lados más largos y el material para lados era para los lados más chicos."
+      ],
+      "metadata": {
+        "id": "-lCEids0zREF"
+      },
+      "id": "-lCEids0zREF"
+    },
+    {
+      "cell_type": "markdown",
       "id": "d04a104b",
       "metadata": {
         "id": "d04a104b"
@@ -75,12 +165,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "$C(x, h)= 24x^2 +24xh$"
+        "### ¿Qué se corrigió?\n",
+        "ahora el área de la base es $$ 2x^2 $$ porque el largo de la base es 2 veces x y multiplicado por x para sacar el área. Por lo tanto en la función de costo ahora se multiplica 2 por 12 para el material de base y 6 por 6 por que los dos lados largos de rectangulo requiere 4 cuadros por altura + 2 cuadros para las tapas de los lados."
+      ],
+      "metadata": {
+        "id": "lsmhCyLS1jo6"
+      },
+      "id": "lsmhCyLS1jo6"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$C(x, h)= 24x^2 +36xh$"
       ],
       "metadata": {
         "id": "MPwwP3m5mJGc"
       },
       "id": "MPwwP3m5mJGc"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ¿Cómo se puede evitar? \n",
+        "Se podria evitar dibujando el problema en mi cuaderno para poder imaginar bien el problema."
+      ],
+      "metadata": {
+        "id": "N-HlxPWx3onT"
+      },
+      "id": "N-HlxPWx3onT"
     },
     {
       "cell_type": "markdown",
@@ -106,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 22,
       "id": "8b1217dd",
       "metadata": {
         "colab": {
@@ -114,7 +226,7 @@
           "height": 38
         },
         "id": "8b1217dd",
-        "outputId": "c8f94d5e-66c3-4fa1-e553-eb6bad37c988"
+        "outputId": "5bcb5f23-0eb7-41e0-fa47-780352bd5661"
       },
       "outputs": [
         {
@@ -126,7 +238,7 @@
             "text/latex": "$\\displaystyle 2 h x^{2} - 12$"
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 22
         }
       ],
       "source": [
@@ -139,7 +251,7 @@
         "sp.var(\"b\") #Area Base \n",
         "sp.var(\"l\") #Area Base \n",
         "\n",
-        "costo = 24*x**2 + 24*x*h\n",
+        "costo = 24*x**2 + 36*x*h\n",
         "\n",
         "b = 2*x**2\n",
         "l = x*h\n",
@@ -150,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 23,
       "id": "7990dbe3",
       "metadata": {
         "colab": {
@@ -158,19 +270,19 @@
           "height": 38
         },
         "id": "7990dbe3",
-        "outputId": "c645600a-37f9-495e-f1d7-593f088ec760"
+        "outputId": "7357d5a7-7677-45d5-dd9e-33d46b1e3f96"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "24*h*x + 24*x**2"
+              "36*h*x + 24*x**2"
             ],
-            "text/latex": "$\\displaystyle 24 h x + 24 x^{2}$"
+            "text/latex": "$\\displaystyle 36 h x + 24 x^{2}$"
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 23
         }
       ],
       "source": [
@@ -189,10 +301,10 @@
           "height": 58
         },
         "id": "VuJJPu7vtfRk",
-        "outputId": "baf5e8d7-27a4-4d2a-b50f-80fb989f6069"
+        "outputId": "111ce3f6-424b-47d0-f58f-322e8f3a20d7"
       },
       "id": "VuJJPu7vtfRk",
-      "execution_count": 11,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -203,7 +315,7 @@
             "text/latex": "$\\displaystyle \\sqrt{6} \\sqrt{\\frac{1}{h}}$"
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 24
         }
       ]
     },
@@ -219,10 +331,10 @@
           "height": 58
         },
         "id": "s0gIpvwOtmdG",
-        "outputId": "699a63a8-d12a-4924-89cc-d4375f61ed21"
+        "outputId": "f3136798-3bbb-4023-cf3b-64c841915c85"
       },
       "id": "s0gIpvwOtmdG",
-      "execution_count": 12,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -233,7 +345,7 @@
             "text/latex": "$\\displaystyle \\sqrt{6} \\sqrt{\\frac{1}{h}}$"
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 25
         }
       ]
     },
@@ -249,21 +361,21 @@
           "height": 58
         },
         "id": "nIq8y5Pgt0dn",
-        "outputId": "30b983f1-c411-443b-a161-2e7cd15c68f5"
+        "outputId": "7473f38e-66fa-4b48-bb4d-2b11e6cb84d9"
       },
       "id": "nIq8y5Pgt0dn",
-      "execution_count": 14,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "24*sqrt(6)*h*sqrt(1/h) + 144/h"
+              "36*sqrt(6)*h*sqrt(1/h) + 144/h"
             ],
-            "text/latex": "$\\displaystyle 24 \\sqrt{6} h \\sqrt{\\frac{1}{h}} + \\frac{144}{h}$"
+            "text/latex": "$\\displaystyle 36 \\sqrt{6} h \\sqrt{\\frac{1}{h}} + \\frac{144}{h}$"
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 26
         }
       ]
     },
@@ -279,21 +391,21 @@
           "height": 58
         },
         "id": "EuFguwSIt__9",
-        "outputId": "c77aeacc-d773-4898-99da-fd10e08c3007"
+        "outputId": "66feb7a6-06b4-4b7a-f9f7-66e5697a8797"
       },
       "id": "EuFguwSIt__9",
-      "execution_count": 15,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "12*sqrt(6)*sqrt(1/h) - 144/h**2"
+              "18*sqrt(6)*sqrt(1/h) - 144/h**2"
             ],
-            "text/latex": "$\\displaystyle 12 \\sqrt{6} \\sqrt{\\frac{1}{h}} - \\frac{144}{h^{2}}$"
+            "text/latex": "$\\displaystyle 18 \\sqrt{6} \\sqrt{\\frac{1}{h}} - \\frac{144}{h^{2}}$"
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 27
         }
       ]
     },
@@ -308,20 +420,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wg0Z6ho9uEli",
-        "outputId": "ac5e5115-726a-49cc-ef26-add3a46582c2"
+        "outputId": "277a98e0-5955-489d-d054-4dd39f0e6b57"
       },
       "id": "wg0Z6ho9uEli",
-      "execution_count": 16,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[2*3**(1/3)]"
+              "[2*6**(2/3)/3]"
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 28
         }
       ]
     },
@@ -335,20 +447,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LJdDCgMTuKf-",
-        "outputId": "0ca2803a-b76a-43e2-ec32-0bd31e4a81aa"
+        "outputId": "ee86e7e8-0615-4f9d-952c-7e50361c57f9"
       },
       "id": "LJdDCgMTuKf-",
-      "execution_count": 17,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "2.8844991406148166"
+              "2.201284832596418"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 29
         }
       ]
     },
@@ -363,20 +475,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mPrSxdbsuOLn",
-        "outputId": "53f64a97-a9cc-41e5-92b1-36d20320e884"
+        "outputId": "7b2e19c1-8d40-4972-b086-881a5a30047b"
       },
       "id": "mPrSxdbsuOLn",
-      "execution_count": 19,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.4422495703074083"
+              "1.6509636244473134"
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 30
         }
       ]
     },
@@ -384,8 +496,8 @@
       "cell_type": "markdown",
       "source": [
         "### Las dimensiones que la caja debe de medir para tener un volumen de 12cm cubicos es...\n",
-        "$$ altura = 2.88cm $$\n",
-        "$$ ancho = 1.44cm $$"
+        "$$ altura = 2.20cm $$\n",
+        "$$ ancho = 1.65cm $$"
       ],
       "metadata": {
         "id": "MYtAbvYXu2MY"
@@ -404,25 +516,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 31,
       "id": "0c638fe3",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0c638fe3",
-        "outputId": "6c54891a-0a6f-4950-ebae-7efacc1de53d"
+        "outputId": "4bf71856-6b31-4860-c148-7b1493007880"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "149.76603525973707"
+              "196.24902402587108"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 31
         }
       ],
       "source": [
@@ -434,7 +546,7 @@
       "cell_type": "markdown",
       "source": [
         "### El costo mínimo para realizar la caja es de...\n",
-        "$$ costo = 149 UnidadesMonetarias $$"
+        "$$ costo = 196.24 UnidadesMonetarias $$"
       ],
       "metadata": {
         "id": "bgESdZcuv5Fs"
